<resources>
    <string name="app_name">ModelPaper</string>
    <string name="userName">User Name</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="profile">Profile Management</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="update">Update Profile</string>
    <string name="editPro">Edit Profile</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="del">Delete</string>
    <string name="add">Add</string>
</resources>